ADD Logica de salvar Arquivo, FIX Tratamento Erros